--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 <h6 class="under-pic" style="text-align:center;"><i> (source:eclipse-tractusx)</i></h6>
 
 
-<a href="product 2.html">link</a>
+<a href="./product 2.html">link</a>
+<a href="./product{1}.html">linkagain</a>
 </body>
 </html>
