--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
    <title>Product Carbon Footprint</title>
-   <head><style>
+<head>
+<style>
       .main-heading{
         font-size: 4rem;
         /* Large font size */
@@ -99,13 +100,24 @@
     color:rgb(44, 114, 47);
     font-family: Arial, Helvetica, sans-serif ;
     background-color: rgb(239, 165, 75);
-     }
-  </style> 
+     }  
   
+.button{
+  font: bold 11px Arial;
+  text-decoration: none;
+  background-color:rgb(239, 165, 75);
+  color: white;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
 
-
-
+</style>
 </head>
+  
+   
    <body>
     <h1 class="logo">Smart Select</h1>
       <header class="main-heading">Product Carbon Footprint</header>
@@ -157,8 +169,8 @@
 <img class="img-3" src="https://eclipse-tractusx.github.io/assets/images/PCFCalculation-ff1685dee10e4ef5d27dba11ac1b3442.png">
 <h6 class="under-pic" style="text-align:center;"><i> (source:eclipse-tractusx)</i></h6>
 
-
-<a href="./product 2.html">link</a>
-<a href="./product{1}.html">linkagain</a>
+ <a href="./product {1}.html" class="button">Example</a>           
+<a href="./product 2.html" class="button">Example</a>
+            
 </body>
 </html>
