--- a/product{1}.html
+++ b/product{1}.html
@@ -69,6 +69,14 @@ rect {
     color: rgb(239, 165, 75) ;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+img{
+  display: inline;
+  height: 50px;
+  width: 50px;
+   max-width: 100%; 
+   max-height:100%;
+}      	
 </style>
 
 
@@ -77,9 +85,11 @@ rect {
 
 <body>
 
-<h1 class="logo">Smart Select</h1>
+<div class="header">
+    <img src="https://cdn-icons-png.flaticon.com/512/4661/4661148.png">
+    <h1 class="logo">Smart Select</h1>
+  </div> 
   
- 
 <header class="sub-heading">Alps Soap Data</header>
  <h2 class="process-heading">
     Raw Material Extraction:
