--- a/product{1}.html
+++ b/product{1}.html
@@ -3,22 +3,29 @@
 <head>
 <style>
     .logo{
-    color:rgb(44, 114, 47);
-    font-family: Arial, Helvetica, sans-serif ;
-    background-color: rgb(239, 165, 75);
+  color:rgb(44, 114, 47);
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif ;
+  display: inline;
      }
 
-     .sub-heading {
-         color: rgb(44, 114, 47);
-         font: size 35px;
-         text-transform: uppercase;
-         text-align: justify;
-         font-family: Arial, Helvetica, sans-serif;
-     }
-
-     body {
-  background: #f5f3e7;
-}
+     .sub-heading{
+    font-size: 4rem;
+    /* Large font size */
+    color: rgb(44, 114, 47);
+     /* Dark blue color */
+    text-align: center;
+    /* Center the text */
+    letter-spacing: 2px;
+    /* Space between letters */
+    text-shadow: 2px 2px 4px rgba(149, 236, 117, 0.2);
+    /* Soft shadow effect */
+    font-family: Arial, Helvetica, sans-serif;
+    /* Font family */
+    transition: transform 0.3s ease;
+    /* Smooth scaling effect */
+    display: inline-block;
+    display: block;
+      }
 
 .box-group{
     text-align: center;
@@ -64,11 +71,7 @@ rect {
          font-family: Arial, Helvetica, sans-serif;
          }
 
-.list-content{
-    font-size: smaller;
-    color: rgb(239, 165, 75) ;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+
 
 img{
   display: inline;
