--- a/product{1}.html
+++ b/product{1}.html
@@ -11,7 +11,7 @@
      .sub-heading{
     font-size: 4rem;
     /* Large font size */
-    color: rgb(44, 114, 47);
+    color: rgbrgb(239, 165, 75);
      /* Dark blue color */
     text-align: center;
     /* Center the text */
@@ -79,7 +79,14 @@ img{
   width: 50px;
    max-width: 100%; 
    max-height:100%;
-}      	
+} 
+
+.list-content{
+  color:white;
+  font-background:none
+	
+	
+}	
 </style>
 
 
@@ -163,9 +170,9 @@ Total=1000×1=1000 kg CO e</li>
 </ul>
 </h2>
 
-<h2 class="list-content">
+<h2 class="process-heading">
     Disposal:
-<ul>
+<ul class="list-content">
     <li>End-of-Life Scenario: Assuming the soap is composted or disposed of in a landfill.</li>
     <li>Estimated Emissions: Assume emissions from disposal are around 0.05 kg CO₂e per soap.</li>
     <li>Total emissions from disposal:</li><br>
