--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </head>
   
    
-   <body>
+   <body bgcolor="black">
     <h1 class="logo">Smart Select</h1>
       <header class="main-heading">Product Carbon Footprint</header>
       
