--- a/product 2.html
+++ b/product 2.html
@@ -5,31 +5,59 @@
     .logo{
     color:rgb(44, 114, 47);
     font-family: Arial, Helvetica, sans-serif ;
-    background-color: rgb(239, 165, 75);
+    display: inline;
      }
 
-     .sub-heading {
-         color: rgb(44, 114, 47);
-         font: size 35px;
-         text-transform: uppercase;
-         text-align: justify;
-         font-family: Arial, Helvetica, sans-serif;
-     }
+     .sub-heading{
+    font-size: 4rem;
+    /* Large font size */
+    color:rgb(239, 165, 75);
+     /* Dark blue color */
+    text-align: center;
+    /* Center the text */
+    letter-spacing: 2px;
+    /* Space between letters */
+    text-shadow: 2px 2px 4px rgba(149, 236, 117, 0.2);
+    /* Soft shadow effect */
+    font-family: Arial, Helvetica, sans-serif;
+    /* Font family */
+    transition: transform 0.3s ease;
+    /* Smooth scaling effect */
+    display: inline-block;
+    display: block;
+      }
 
-     .process-heading {
-         color: rgb(44, 114, 47);
-         font: size 25px;
-         text-transform: uppercase;
-         text-align: justify;
-         font-family: Arial, Helvetica, sans-serif;
-         }
+      img{
+  display: inline;
+  height: 50px;
+  width: 50px;
+   max-width: 100%; 
+   max-height:100%;
+}         
+
+.process-heading{
+  color:rgb(70, 136, 46) ;
+}
+
+.list-content{
+  color: white;
+}
+
+.yellow-heading{
+color: rgb(239, 165, 75);
+}
 </style>
 </head>
 
 
-<body>
+<body bgcolor="black">
+<div class="header">
+    <img src="https://cdn-icons-png.flaticon.com/512/4661/4661148.png">
+    <h1 class="logo">Smart Select</h1>
+</div> 
+
 <header class="sub-heading">Swan Soap Data</header>
-<h1 class="logo">Smart Select</h1>
+
   
 <h2 class="process-heading">
     Raw Material Extraction:
@@ -43,14 +71,14 @@
 <li>Glycerin: 0.4 kg CO₂e per kg</li>
 
 
-    <p>Assuming the following quantities for a batch of 1000 soaps (150g each)
+<p class="list-content">Assuming the following quantities for a batch of 1000 soaps (150g each)
 <li>Palm Oil: 40 kg</li>
 <li>Synthetic Fragrance: 10 kg</li>
 <li>Sodium Lauryl Sulfate: 20 kg</li>
 <li>Glycerin: 15 kg</li>
 </ul>
  
-<p> Total Emisions for Raw Materials:<br>
+<p class="list-content"> Total Emisions for Raw Materials:<br>
 Total=(40×0.8)+(10×1.0)+(20×0.6)+(15×0.4)=32+10+12+6=60 kg CO e
 <br>
 </h2> 
@@ -59,23 +87,23 @@ Total=(40×0.8)+(10×1.0)+(20×0.6)+(15×0.4)=32+10+12+6=60 kg CO e
     Manufacturing:
 <ul class="list-content">
 <li>Energy Use: Assume energy consumption results in emissions of about 1.5 kg CO₂e per soap.</li>
-<li>Total Emissions for Manufacturing:<br>
-Total=1000×1.5=1500 kg CO e</li>
+<p class="list-content">Total Emissions for Manufacturing:<br>
+Total=1000×1.5=1500 kg CO e</p>
 </ul>
 </h2>
 
 <h2 class="process-heading">
     Packaging:
 <ul class="list-content">
-<li>Materials: plastic wrap and cardboard box</li>
+<p class="list-content">Materials: plastic wrap and cardboard box</p>
 
 <li>Estimated Emissions:</li>
 <li>Plastic Wrap: 0.3 kg CO₂e per soap</li>
 <li>Cardboard Box: 0.2 kg CO₂e per box</li>
-    <p>Assuming each box contains ten soaps:
+    <p class="list-content">Assuming each box contains ten soaps:
 <li>Total boxes needed: 100</li>
-<li>Total emissions from packaging:</li><br>
-<p>Total=(1000×0.3)+(100×0.2)=300+20=320 kg CO e
+<p class="list-content">Total emissions from packaging:</p><br>
+Total=(1000×0.3)+(100×0.2)=300+20=320 kg CO e
 </ul>
 </h2>
 
@@ -84,8 +112,8 @@ Total=1000×1.5=1500 kg CO e</li>
 <ul class="list-content">
 <li>Transport Method: Truck transport over an average distance of 800 km.</li>
 <li>Estimated Emissions: Assume transport emissions are about 0.15 kg CO₂e per soap.</li>
-<li>Total emissions from Distribution:</li><br>
-<p>Total=1000×0.15=150 kg CO e
+<p class="list-content">Total emissions from Distribution:<br>
+Total=1000×0.15=150 kg CO e
 </ul>
 </h2>
 
@@ -95,8 +123,8 @@ Total=1000×1.5=1500 kg CO e</li>
 <li>Consumer Use: Average use of one bar lasts for about two months with daily use.</li>
 <li>Estimated Emissions:Assume emissions from water heating and other factors are around 0.02 kg CO₂e per wash.
     Assuming one wash daily for two months (60 washes):</li>
-    <li>Total emissions from usage:</li><br>
-<p>Total=60×0.02=1.2 kg CO e</p>
+<p class="list-content">Total emissions from usage:<br>
+Total=60×0.02=1.2 kg CO e</p>
 </ul>
 </h2>
 
@@ -105,13 +133,13 @@ Total=1000×1.5=1500 kg CO e</li>
 <ul>
     <li>End-of-Life Scenario: Assuming the soap is composted or disposed of in a landfill.</li>
     <li>Estimated Emissions: Assume emissions from disposal are around 0.1 kg CO₂e per soap.</li>
-    <li>Total emissions from disposal:</li><br>
-</ul>    
-    <p>Total=1000×0.1=100 kg CO e
+    <p class="list-content">Total emissions from disposal:<br>   
+    Total=1000×0.1=100 kg CO e</p>
+    </ul>
 </h2>
 
 <h1 class="sub-heading">Overall Carbon Footprint Calculation</h1>
-<p>Now, summing all the emissions from each stage:<br>
+<p class="list-content">Now, summing all the emissions from each stage:<br>
     Total Carbon Footprint= Raw Materials+ Manufacturing + Packaging + Distribution +
     Use Phase + Disposal<br>
     =60+1500+320+150+1.2+100=2131.2 kg CO e
