--- a/index.html
+++ b/index.html
@@ -169,8 +169,11 @@
 <img class="img-3" src="https://eclipse-tractusx.github.io/assets/images/PCFCalculation-ff1685dee10e4ef5d27dba11ac1b3442.png">
 <h6 class="under-pic" style="text-align:center;"><i> (source:eclipse-tractusx)</i></h6>
 
- <a href="./product {1}.html" class="button">Example</a>           
+ <a href="./product{1}.html" class="button">Example</a>           
 <a href="./product 2.html" class="button">Example</a>
-            
+<a href="./product3.html" class="button">Example</a>
+<a href="./product4.html" class="button">Example</a>
+<a href="./product5.html" class="button">Example</a>
+<a href="./product6.html" class="button">Example</a>
 </body>
 </html>
