--- a/PCF.html
+++ b/PCF.html
@@ -1,201 +1,245 @@
-<html>
-   <title>Product Carbon Footprint</title>
+<!DOCTYPE html>
+<html lang="en">
    <head>
-   <style>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Product Carbon Footprint</title>
+      <style>
+         body {
+            background-color: rgb(12, 16, 13);
+            margin: 0;
+            font-family: Arial, sans-serif;
+         }
 
-      body{
-         background-color:rgb(12, 16, 13);
-      }
+         .banner {
+            background-image: url('images/cottage core raspberry desktop wallpaper.jpg'); 
+            width: 100%;
+            height: 300px; /* Set a fixed height */
+            border: 5px solid rgba(55, 67, 34, 1);
+            border-radius: 2.5px;
+            box-sizing: border-box;
+            text-align: center;
+            color: white;
+         }
 
-      .main-heading{
-        font-size: 4rem;
-        color:white;
-        text-align: center;
-        letter-spacing: 2px;
-        text-shadow: 2px 2px 4px rgba(55, 67, 34, 1);
-        font-family:Silkscreen;
-        transition: transform 0.3s ease;
-        display: block;
-      }
+         .logo {
+            font-family: 'Silkscreen', sans-serif;
+            font-size: 80px;
+            font-weight: normal;
+            margin-top: 100px;
+            letter-spacing: 3px;
+            animation: typing 3s steps(20) 1s forwards, blink 0.8s step-end infinite;
+         }
 
-      .description-1 {
-         color:white;
-         text-align: center;
-         text-transform: capitalize;
-         font-family: Bruno_Ace;
-         font-size: medium;
-         border: 1px solid rgba(55, 67, 34, 1);
-         border-radius: 2.5px;
-         box-sizing: border-box;
-         margin: 10px;
-         height: auto;
-         width:100%;
-         background-color: rgba(55, 67, 34, 1);
-         align-items: center;
-      }
+         .main-heading {
+            font-size: 4rem;
+            color: white;
+            text-align: center;
+            letter-spacing: 2px;
+            text-shadow: 2px 2px 4px rgba(55, 67, 34, 1);
+            font-family: Silkscreen;
+            transition: transform 0.3s ease;
+            display: block;
+            margin-top: 50px;
+         }
 
-      .description-2, .description-3, .description-4 {
-         color:white;
-         text-align: center;
-         text-transform: capitalize;
-         font-family:Bruno_Ace;
-         font-size: medium;
-      }
+         .description-1 {
+            color: white;
+            text-align: center;
+            text-transform: capitalize;
+            font-family: 'Bruno_Ace', sans-serif;
+            font-size: medium;
+            border: 1px solid rgba(55, 67, 34, 1);
+            border-radius: 2.5px;
+            box-sizing: border-box;
+            margin: 10px;
+            padding: 15px;
+            background-color: rgba(55, 67, 34, 1);
+         }
 
-      .sub-heading {
-         color:rgba(130, 146, 58, 1);
-         font-size: 35px;
-         text-align: justify;
-      }
+         .sub-heading {
+            color: rgba(130, 146, 58, 1);
+            font-size: 35px;
+            text-align: center;
+            font-family: 'Silkscreen', sans-serif;
+         }
 
-      .logo{
-         color:white;
-         font-family:Silkscreen;
-      }
+         .div1 {
+            display: flex;
+            justify-content: space-around;
+            margin-top: 20px;
+         }
 
-      .banner{ 
-         background-image: url(cottage\ core\ raspberry\ desktop\ wallpaper\ copy.jpg);       
-         width:100% ;
-         height:fit-content;
-         border: 5px solid rgba(55, 67, 34, 1);
-         border-radius: 2.5px;
-         box-sizing: border-box;
-      }   
+         .div1-baby, .div2-baby, .div3-baby {
+            width: 500px;
+            height: 500px;
+            border: 5px solid rgba(55, 67, 34, 1);
+            border-radius: 2.5px;
+            box-sizing: border-box;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+         }
 
-      /* Flexbox layout for div1 */
-      .div1 {
-         display: flex;
-         border: 0px;
-      }
+         .div1-baby {
+            background-image: url('images/1.jpeg');
+            margin-left: 10px;
+         }
 
-      /* Adjusted styles for image boxes */
-      .div1-baby, .div2-baby, .div3-baby {
-         width: 500px;
-         height: 500px;
-         border: 5px solid rgba(55, 67, 34, 1);
-         border-radius: 2.5px;
-         box-sizing: border-box;
-         background-size: cover;  /* Ensures images cover the div fully */
-         background-position: center;  /* Centers the image within the div */
-         background-repeat: no-repeat;  /* Prevents image from repeating */
-         transition: transform 0.3s ease, box-shadow 0.3s ease;
-      }
+         .div2-baby {
+            background-image: url('images/2.jpeg');
+            margin: 10px;
+         }
 
-      .div1-baby {
-         background-image: url(1.jpeg);  /* Example image */
-         margin-left: 10px;
-      }
+         .div3-baby {
+            background-image: url('images/3.jpeg');
+            margin-right: 10px;
+         }
 
-      .div2-baby {
-         background-image: url(2.jpeg);  /* Example image */
-         margin: 10px;
-         margin-top: auto;
-      }
+         .inbox {
+            text-align: center;
+            padding: 20px;
+            color: white;
+            font-family: 'Bruno_Ace', sans-serif;
+            font-size: 1.2rem;
+            background-color: rgba(55, 67, 34, 0.8);
+            border-radius: 5px;
+         }
 
-      .div3-baby {
-         background-image: url(3.jpeg);  /* Example image */
-         margin-right: 10px;
-         text-align: center;
-      }
+         .div1-baby:hover, .div2-baby:hover, .div3-baby:hover {
+            transform: scale(1.05);
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
+         }
 
-      .inbox {
-         text-align: center;
-      }
+         .sources {
+            display: flex;
+            flex-direction: column;
+            margin-top: 40px;
+            align-items: center;
+         }
 
-      /* Hover effects for image boxes */
-      .div1-baby:hover, .div2-baby:hover, .div3-baby:hover {
-         transform: scale(1.05);
-         box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.3);
-      }
+         .cdp, .ogd, .party {
+            width: 80%;
+            padding: 20px;
+            border: 5px solid rgba(55, 67, 34, 1);
+            border-radius: 2.5px;
+            box-sizing: border-box;
+            text-align: center;
+            margin-bottom: 10px;
+            background-color: rgba(55, 67, 34, 0.645);
+         }
 
-      /* Sources section styles */
-      .sources {
-         display: flex;
-         flex-direction: column;
-         border: 0px;
-      }
+         p {
+            font-size: large;
+            color: white;
+            font-family: SourGummy;
+            text-align: center;
+         }
 
-      .cdp, .ogd, .party {
-         width: 100%;
-         height: 30%;
-         border: 5px solid rgba(55, 67, 34, 1);
-         border-radius: 2.5px;
-         box-sizing: border-box;
-         text-align: center;
-         margin-bottom: 10px;
-         background-color:rgba(55, 67, 34, 0.645) ;
-      }
+         a {
+            color: rgba(130, 146, 58, 1);
+            text-decoration: none;
+         }
 
-      p{
- font-size: large;        
- color: white;
- font-family: SourGummy;   
- text-align: center;
-}
+         a:hover {
+            text-decoration: underline;
+         }
 
-a{
-   color: white;
-}
+         .party ul {
+            list-style-type: none;
+            padding: 0;
+         }
 
-   </style>
+         .party ul li {
+            margin: 5px 0;
+         }
+
+         .party ul li a {
+            color: rgba(130, 146, 58, 1);
+            text-decoration: none;
+         }
+
+         .party ul li a:hover {
+            text-decoration: underline;
+         }
+
+         @keyframes typing {
+            0% {
+               width: 0;
+            }
+            100% {
+               width: 100%;
+            }
+         }
+
+         /* Blinking cursor effect */
+         @keyframes blink {
+            0%, 50% {
+               content: "_";
+            }
+            51%, 100% {
+               content: "";
+            }
+         }
+      </style>
    </head>
 
    <body>
-   
-   <div class="banner">  
-      <h1 class="logo">Smart Select</h1>
-   </div>
 
-   <header class="main-heading">Product Carbon Footprint</header>
-
-   <p class="description-1">
-      A product carbon footprint (or PCF) is the calculation of all the greenhouse gas (GHG) emissions 
-      generated in the supply chain of a specific product
-   </p>      
-
-   <h2 class="sub-heading">How we do it:</h2>
-   <p class="description-2">
-      Our company employs a cradle to grave analysis calculates the carbon footprints of products from the extraction of raw materials (cradle) to the disposal (grave).
-   </p>
-
-   <p class="description-3">
-      There are 2 kinds of data required to calculate the PCF:
-   </p>
-
-   <div class="div1">
-      <div class="div1-baby">
-         <p class="inbox">Information about the production processes (with boundaries set out)</p>
-      </div>
-      <div class="div2-baby">
-         <p class="inbox">Emissions data (usually emissions factors)</p>
-      </div>
-      <div class="div3-baby">
-         <p>To finally calculate PCF, the formula <strong><i>activity * emissions factor</i></strong> for every activity is used to develop the product's emissions inventory.</p>
-      </div>
-   </div>
-
-   <h2 class="sub-heading">Where We Get Our Data:</h2>
-   
-   <div id="sources">
-      <div class="cdp">
-         <p>The CDP (formerly the Carbon Disclosure Project) is an international non-profit organisation that helps companies, cities, states, regions and public authorities disclose their environmental impact. It aims to make environmental reporting and risk management a business norm, driving disclosure, insight, and action towards a sustainable economy.</p>
-         <a href="https://www.cdp.net/en">Here's a Link to their Website</a>
-      </div>
-      
-      <div class="ogd">
-         <p>Open Government Data (OGD) platforms</p>
-         <a href="https://www.data.gov.in/">Here's a Link to their Website</a>
+      <div class="banner">
+         <h1 class="logo">Smart Select</h1>
       </div>
 
-      <div class="party">
-         <p>Information from investors, carbon footprinting websites, and third-party sources.</p>
-         <ul>Here's a List of Websites for referance
-         <li><a href="https://www.carbonfootprint.com/#:~:text=carbonfootprint.com%20%2D%20Home%20of%20Carbon%20Footprinting"></a></li>
-         <li><a href="https://www.climatepartner.com/en/take-action/measure-carbon-footprints/corporate-carbon-footprint-ccf"></a></li>
-         <li><a href="https://climatetrade.com/the-worlds-most-polluting-industries/"></a></li>
-         </ul>
+      <header class="main-heading">Product Carbon Footprint</header>
+
+      <p class="description-1">
+         A product carbon footprint (or PCF) is the calculation of all the greenhouse gas (GHG) emissions generated in the supply chain of a specific product
+      </p>
+
+      <h2 class="sub-heading">How We Do It:</h2>
+      <p class="description-2">
+         Our company employs a cradle-to-grave analysis that calculates the carbon footprints of products from the extraction of raw materials (cradle) to the disposal (grave).
+      </p>
+
+      <p class="description-3">
+         There are 2 kinds of data required to calculate the PCF:
+      </p>
+
+      <div class="div1">
+         <div class="div1-baby">
+            <p class="inbox">Information about the production processes (with boundaries set out)</p>
+         </div>
+         <div class="div2-baby">
+            <p class="inbox">Emissions data (usually emissions factors)</p>
+         </div>
+         <div class="div3-baby">
+            <p class="inbox">To finally calculate PCF, the formula <strong><i>activity * emissions factor</i></strong> for every activity is used to develop the product's emissions inventory.</p>
+         </div>
       </div>
-   </div>
+
+      <h2 class="sub-heading">Where We Get Our Data:</h2>
+
+      <div class="sources">
+         <div class="cdp">
+            <p>The CDP (formerly the Carbon Disclosure Project) is an international non-profit organisation that helps companies, cities, states, regions, and public authorities disclose their environmental impact. It aims to make environmental reporting and risk management a business norm, driving disclosure, insight, and action towards a sustainable economy.</p>
+            <a href="https://www.cdp.net/en">Here's a Link to their Website</a>
+         </div>
+
+         <div class="ogd">
+            <p>Open Government Data (OGD) platforms</p>
+            <a href="https://www.data.gov.in/">Here's a Link to their Website</a>
+         </div>
+
+         <div class="party">
+            <p>Information from investors, carbon footprinting websites, and third-party sources.</p>
+            <ul>Here's a List of Websites for reference:
+               <li><a href="https://www.carbonfootprint.com/#:~:text=carbonfootprint.com%20%2D%20Home%20of%20Carbon%20Footprinting">Carbon Footprint</a></li>
+               <li><a href="https://www.climatepartner.com/en/take-action/measure-carbon-footprints/corporate-carbon-footprint-ccf">Climate Partner</a></li>
+               <li><a href="https://climatetrade.com/the-worlds-most-polluting-industries/">Climate Trade</a></li>
+            </ul>
+         </div>
+      </div>
 
    </body>
-</html> 
+</html>
