--- a/PCF.html
+++ b/PCF.html
@@ -182,6 +182,22 @@
                content: "";
             }
          }
+
+         .links {
+            text-align: center;
+            margin-top: 40px;
+            font-size: 1.2rem;
+         }
+
+         .links a {
+            color: rgba(130, 146, 58, 1);
+            margin: 5px;
+            text-decoration: none;
+         }
+
+         .links a:hover {
+            text-decoration: underline;
+         }
       </style>
    </head>
 
@@ -194,7 +210,7 @@
       <header class="main-heading">Product Carbon Footprint</header>
 
       <p class="description-1">
-         A product carbon footprint (or PCF) is the calculation of all the greenhouse gas (GHG) emissions generated in the supply chain of a specific product
+         A product carbon footprint (or PCF) is the calculation of all the greenhouse gas (GHG) emissions generated in the supply chain of a specific product.
       </p>
 
       <h2 class="sub-heading">How We Do It:</h2>
@@ -239,6 +255,17 @@
                <li><a href="https://climatetrade.com/the-worlds-most-polluting-industries/">Climate Trade</a></li>
             </ul>
          </div>
+      </div>
+
+      <!-- Links to product comparison pages -->
+      <div class="links">
+         <h3>Compare Our Products:</h3>
+         <a href="Products/compareAlps.html">Compare Alps</a>
+         <a href="Products/compareKatkit.html">Compare Katkit</a>
+         <a href="Products/compareKymaa.html">Compare Kymaa</a>
+         <a href="Products/compareLindsday.html">Compare Lindsday</a>
+         <a href="Products/compareShimmer.html">Compare Shimmer</a>
+         <a href="Products/compareswan.html">Compare Swan</a>
       </div>
 
    </body>
