--- a/Products/compareAlps.html
+++ b/Products/compareAlps.html
@@ -116,7 +116,7 @@
       <canvas id="carbonChart"></canvas>
     </div>
     <!-- Image next to the chart, updated to relative path -->
-    <img src="images/alps-soap.jpg" alt="Alps Soap Image"> <!-- Replace with correct image path -->
+    <img src="https://github.com/Tara100110/Smart-Select-PCF-/blob/main/images/Alps%20soap.jpg?raw=true" alt="Alps Soap Image"> <!-- Replace with correct image path -->
   </div>
 
   <script>
