--- a/Products/compareKatkit.html
+++ b/Products/compareKatkit.html
@@ -108,7 +108,7 @@
   <header class="main-heading">Comparing Katkit Chocolate</header>  
 
   <!-- Learn More button -->
-  <a href="data/product3.html"><button>Learn More</button></a>
+  <button onclick="window.location.href='data/product3.html'">Learn More</button>
 
   <div class="container">
     <div class="chart-container">
