--- a/Products/compareKatkit.html
+++ b/Products/compareKatkit.html
@@ -108,7 +108,8 @@
   <header class="main-heading">Comparing Katkit Chocolate</header>  
 
   <!-- Learn More button -->
-  <button onclick="window.location.href='data/product3.html'">Learn More</button>
+
+  <button onclick="window.location.href='../data/product3.html'">Learn More</button>
 
   <div class="container">
     <div class="chart-container">
@@ -117,7 +118,7 @@
       <canvas id="carbonChart"></canvas>
     </div>
     <!-- Image next to the chart, make sure the path is correct -->
-    <img src="images/KatKit.jpg" alt="KatKit Chocolate Image"> <!-- Change this to correct image path -->
+    <img src="../images/KatKit.jpg" alt="KatKit Chocolate Image"> <!-- Change this to correct image path -->
   </div>
 
   <script>
