--- a/Products/compareKymaa.html
+++ b/Products/compareKymaa.html
@@ -109,8 +109,8 @@
   <header class="main-heading">Comparing Kymaa Blush</header>  
 
   <!-- Learn More button -->
-  
-  <a href="data/product5.html"><button>Learn More</button></a>
+  <button onclick="window.location.href='../data/product5.html'">Learn More</button>
+
 
   <div class="container">
     <div class="chart-container">
