--- a/Products/compareLindsday.html
+++ b/Products/compareLindsday.html
@@ -109,7 +109,8 @@
   <header class="main-heading">Comparing Lindsday Chocolate</header>  
 
   <!-- Learn More button -->
-  <a href="data/product4.html"><button>Learn More</button></a>
+  <button onclick="window.location.href='../data/product4.html'">Learn More</button>
+  
 
   <div class="container">
     <div class="chart-container">
