--- a/Products/compareAlps.html
+++ b/Products/compareAlps.html
@@ -107,7 +107,7 @@
   <header class="main-heading">Comparing Alps Soap</header>
 
   <!-- Updated Learn More button with proper navigation -->
-  <button onclick="window.location.href='../data/product1.html'">Learn More</button>
+  <button onclick="window.location.href='../data/product{1}.html'">Learn More</button>
 
   <div class="container">
     <div class="chart-container">
