--- a/Products/compareAlps.html
+++ b/Products/compareAlps.html
@@ -32,7 +32,7 @@
     }
 
     .banner {
-      background-image: url('images/cottage-core-raspberry.jpg'); /* Correct path to your banner image */
+      background-image: url('https://github.com/Tara100110/Smart-Select-PCF-/blob/main/images/cottage%20core%20raspberry%20desktop%20wallpaper.jpg?raw=true'); /* Correct path to your banner image */
       width: 100%;
       height: fit-content;
       border: 5px solid rgba(55, 67, 34, 1);
