--- a/Products/compareKymaa.html
+++ b/Products/compareKymaa.html
@@ -32,7 +32,7 @@
     }
 
     .banner {
-      background-image: url('images/cottage-core-raspberry.jpg'); /* Corrected path */
+      background-image: url('https://github.com/Tara100110/Smart-Select-PCF-/blob/main/images/cottage%20core%20raspberry%20desktop%20wallpaper.jpg?raw=true'); /* Corrected path */
       width: 100%;
       height: fit-content;
       border: 5px solid rgba(55, 67, 34, 1);
@@ -119,7 +119,7 @@
       <canvas id="carbonChart"></canvas>
     </div>
     <!-- Image next to the chart -->
-    <img src="images/kymaa-blush.jpg" alt="Kymaa Blush Image"> <!-- Corrected image path -->
+    <img src="https://github.com/Tara100110/Smart-Select-PCF-/blob/main/images/kymaa.jpg?raw=true" alt="Kymaa Blush Image"> <!-- Corrected image path -->
   </div>
 
   <script>
