--- a/Products/compareShimmer.html
+++ b/Products/compareShimmer.html
@@ -32,7 +32,7 @@
     }
 
     .banner {
-      background-image: url('images/cottage-core-raspberry.jpg'); /* Corrected path */
+      background-image: url('https://github.com/Tara100110/Smart-Select-PCF-/blob/main/images/cottage%20core%20raspberry%20desktop%20wallpaper.jpg?raw=true'); /* Corrected path */
       width: 100%;
       height: fit-content;
       border: 5px solid rgba(55, 67, 34, 1);
@@ -109,7 +109,8 @@
   <header class="main-heading">Comparing Shimmer Blush</header>  
 
   <!-- Learn More button -->
-  <a href="data/product6.html"><button>Learn More</button></a>
+  <button onclick="window.location.href='../data/product6.html'">Learn More</button>
+  
 
   <div class="container">
     <div class="chart-container">
@@ -118,7 +119,7 @@
       <canvas id="carbonChart"></canvas>
     </div>
     <!-- Image next to the chart -->
-    <img src="images/shimmer.jpg" alt="Shimmer Blush Image"> <!-- Updated image path -->
+    <img src="https://github.com/Tara100110/Smart-Select-PCF-/blob/main/images/shimmer.jpg?raw=true" alt="Shimmer Blush Image"> <!-- Updated image path -->
   </div>
 
   <script>
