--- a/data/product6.html
+++ b/data/product6.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Wakme</title>
+<title>Shimmer</title>
 <style>
 .logo{
     color:white;
@@ -9,7 +9,7 @@
 
 
 .banner{ 
-  background-image: url(cottage\ core\ raspberry\ desktop\ wallpaper.jpg);       
+  background-image: url('images/cottage core raspberry desktop wallpaper.jpg'); 
   width:100% ;
   height:fit-content;
   border: 5px solid rgba(55, 67, 34, 1);
@@ -63,7 +63,7 @@ background-color:rgb(12, 16, 13); ;
     <h1 class="logo">Smart Select</h1>
 </div>
 
-  <header class="sub-heading">Wakme blush makeup Data</header>
+  <header class="sub-heading">Shimmer blush makeup Data</header>
    <h2 class="process-heading">
       Raw Material Extraction:
    
@@ -145,7 +145,7 @@ background-color:rgb(12, 16, 13); ;
 <p class="list-content">Total Carbon Footprint= Raw Materials+ Manufacturing + Packaging + Distribution +
 Use Phase and Cooking + Disposal<br>
 <br>
-<p class="list-content">Thus, the total cradle-to-grave carbon footprint for a unit of blush 'Wakme' is approximately <i>26.8 kg CO2e</i>.    
+<p class="list-content">Thus, the total cradle-to-grave carbon footprint for a unit of blush 'Shimmer' is approximately <i>26.8 kg CO2e</i>.    
   
 </body>
 
