--- a/data/product3.html
+++ b/data/product3.html
@@ -9,7 +9,7 @@
 
 
 .banner{ 
-  background-image: url(cottage\ core\ raspberry\ desktop\ wallpaper.jpg);       
+  background-image: url('images/cottage core raspberry desktop wallpaper.jpg');    
   width:100% ;
   height:fit-content;
   border: 5px solid rgba(55, 67, 34, 1);
