--- a/data/product4.html
+++ b/data/product4.html
@@ -9,7 +9,7 @@
 
 
 .banner{ 
-  background-image: url('images/cottage core raspberry desktop wallpaper.jpg');      
+  background-image: url('https://github.com/Tara100110/Smart-Select-PCF-/blob/main/images/cottage%20core%20raspberry%20desktop%20wallpaper.jpg?raw=true');      
   width:100% ;
   height:fit-content;
   border: 5px solid rgba(55, 67, 34, 1);
